# pokemon

./: .gitignore  AGENTS.md  README.md  TICKETS.md  deck.csv  example_replay.json  explore_cabt.py  flake.nix  justfile  main.py  play_fire_deck.py  psychic_types.txt  pyproject.toml  treefmt.nix
data/: cards_energy.csv  cards_pokemon.csv  cards_processed.csv  cards_trainer.csv  meta_report.txt
deck/: 000_fire_deck.md  000_fire_deck.py  000_fire_deck_agent.py  000_fire_deck_gameplay.md  001_psychic_deck.md  001_psychic_deck.py  001_psychic_deck_reference.md  002_dragapult_deck.md  002_dragapult_deck.py  decklist.md  dragapult_deck_explanation.md  guidelines_for_first turn.txt  guidelines_for_phantom_dive.txt
docs/: 000_plan_engine_enum_extraction.md  001_dqn_progress.md  001_training_pipeline.md  002_dqn_next_steps.md  003_autoresearch_prep.md  007_heuristics_logic_plan.md  008_review_implementation_plan.md  CABT.md  STRATEGY.md  decklist.md  dqn_usage.md  tournament_archetype_cores.md
heuristic_loop/: CHANGELOG.md  README.md  _dump_step.py  _play_worker.py  eval_heuristic_change.py  prepare_analysis.py  run_batch.py
reverse-engineering/: README.md
scripts/: analyze_heuristic_logs.py  analyze_meta.py  build_deck_reference.py  classify_replay_decks.py  download_replays.py  eval_deck_identifier.py  extract_replay_decks.py  fetch_limitless_decks.py  parse_replay.py  process_cards.py  profile_dqn.py
tests/: test_admin.py  test_cabt_enums.py  test_catalog_records.py  test_deck_id.py  test_determinize.py  test_format_option.py  test_heuristics.py  test_heuristics_dragapult.py  test_meta_deck_library.py  test_native_search.py  test_observed_enums.py  test_opening_score.py  test_python311_compat.py  test_search_function.py  test_smart_score.py
tickets/: PKM-001.md  PKM-002.md  PKM-003.md  PKM-004.md  PKM-005.md  PKM-006.md  PKM-007.md  (+17 more)
(+86 files in other folders)
