[project]
name = "pokemon"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "YTT",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
