[project]
name = "pokemon"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.1",
    "duckdb>=1.5.4",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotly>=6.8.0",
    "polars>=1.41.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "YTT",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
